# C-Tester-Diaries

./: README.md
src/: CMakeLists.txt
src/include/: mylib.hpp
src/mylib/: CMakeLists.txt  mylib.cpp
src/tests/: CMakeLists.txt  main.cpp
